--- a/validator/static/css/scheme.css
+++ b/validator/static/css/scheme.css
@@ -81,6 +81,10 @@
   width: 95%;
 }
 
+#id_ref-filters div > label.custom-control-label{
+  width: 95%;
+}
+
 .alert-danger {
     color: rgb(255, 108, 92);
     background-color: rgba(255, 108, 92, .15);
