better blue button

--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -157,9 +157,9 @@
                                 {% endif %}
                             </div>
 
-                            <div class="col-sm" style="text-align: right; max-width: 5.00rem">
+                            <div class="col-sm" style="text-align: left; max-width: 3.0rem">
                                 <div class="dropdown">
-                                    <button class="dropdownbutton" title="More Options">
+                                    <button class="dropdownbutton" title="More Options"  style="color: #003eff;">
                                         <span class="fas fa-angle-double-right"> </span>
                                     </button>
                                     <div class="dropdown-content" style="text-align: left">
