added app version in About page

--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -51,7 +51,7 @@
 
     <p align="justify">
         QA4SM is open source software, licensed under an MIT license. <a href="https://github.com/awst-austria/qa4sm" target="_blank">It is available on GitHub.</a>
-        This site uses <a class="font-weight-bold" href="https://github.com/awst-austria/qa4sm/releases/" target="_blank">version ?</a>.
+        This site uses <a class="font-weight-bold" href="https://github.com/awst-austria/qa4sm/releases/tag/v{{this.getAppVersion()}}" target="_blank">version {{this.getAppVersion()}}</a>.
     </p>
 
 
