--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -16,17 +16,22 @@
     can be referenced with a <a target="_blank" href="https://www.doi.org/">DOI</a>.
   </p>
 </div>
+<!-- Sorting -->
+<div *ngIf="validations" class="mb-3">
+  <qa-sorting-form (orderQueryName)="getOrder($event)"></qa-sorting-form>
+</div>
+
 <!-- Rows -->
 <div class="card-deck mb-3">
   <div class="container p-mb-5 p-mt-4" style="max-width: 60rem;">
     <div *ngFor="let valrun of validations  | paginate :
         {itemsPerPage: limit, currentPage: page, totalItems: numberOfValidations}">
 
-      <qa-validationrun-row [published]="false" [validationRun]="valrun"></qa-validationrun-row>
+      <qa-validationrun-row [published]=published [validationRun]="valrun"></qa-validationrun-row>
       <br/>
     </div>
 
-<!--    Pagination -->
+    <!--    Pagination -->
     <pagination-template #p="paginationApi"
                          (pageChange)="handlePageChange($event)">
 
@@ -36,7 +41,7 @@
             <a *ngIf="!p.isFirstPage()" (click)="p.previous()"> < </a>
           </li>
 
-          <li  *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
+          <li *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
             <a (click)="p.setCurrent(page.value)" *ngIf="p.getCurrent() !== page.value">
               <span>{{ page.label }}</span>
             </a>
