some styling of sorting form done

--- a/UI/src/app/modules/validation-result/components/sorting-form/sorting-form.component.html
+++ b/UI/src/app/modules/validation-result/components/sorting-form/sorting-form.component.html
@@ -1,18 +1,27 @@
- <div>
-    <div>
-      <span class="input-group-text addon-w" id="sorting_form">Sort By</span>
-      <span class="p-float-label p-mb-5 p-mt-3 p-col-4">
+<div class="card">
+  <div class="p-grid">
+    <div class="p-col-1 p-mt-2">
+      <div class="box">
+        <span class="col-4" id="sorting_form"> Sort By: </span>
+      </div>
+    </div>
+    <div class="p-col">
+      <div class="box">
         <p-dropdown id="sortingChoiceSelector" (onChange)="onSortingChange()"
                     [options]="sortingChoicesModels"
                     [(ngModel)]="selectedChoicesModel"
-                    optionLabel="displayName" [style]="{'width': '100%'}"></p-dropdown>
-      </span>
-      <span class="p-float-label p-mb-5 p-mt-3 p-col-4">
+                    optionLabel="displayName" [style]="{'width': '100%'}">
+        </p-dropdown>
+      </div>
+    </div>
+    <div class="p-col">
+      <div class="box">
         <p-dropdown id="orderSelector" (onChange)="onSortingChange()"
                     [options]="orderChoicesModels"
                     [(ngModel)]="selectedOrderModel"
                     optionLabel="direction"
-                     [style]="{'width': '100%'}"></p-dropdown>
-      </span>
+                    [style]="{'width': '100%'}"></p-dropdown>
+      </div>
     </div>
   </div>
+</div>
