--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -17,7 +17,7 @@
   </p>
 </div>
 <!-- Sorting -->
-<div *ngIf="validations" class="mb-3">
+<div *ngIf="validations" class="container p-mb-5 p-mt-4" style="max-width: 60rem;">
   <qa-sorting-form (orderQueryName)="getOrder($event)"></qa-sorting-form>
 </div>
 
