--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
@@ -1,6 +1,37 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+$button-base-color: #4760E5;
+$button-hover-color: #213FE0;
+
 
 .expiry-icons{
   font-size: 1.5rem;
   padding: 5px;
 }
+.btn-primary {
+  color: #fff;
+  background-color: $button-base-color;
+  border-color: $button-base-color;
+}
+
+.btn-primary:disabled {
+  opacity: 0.5;
+  color: #fff;
+  background-color: $button-base-color;
+  border-color: $button-base-color;
+}
+
+.btn-primary:not(:disabled):not(.disabled):hover, .btn-primary:not(:disabled):not(.disabled):active {
+  color: #fff;
+  background-color: $button-hover-color;
+  border-color: $button-hover-color;
+}
+
+.btn-primary.focus, .btn-primary:focus, .btn-primary:not(:disabled):not(.disabled):active:focus {
+  box-shadow: 0 0 0 .2rem rgba(33, 63, 224, .5);
+}
+.btn-action {
+  width: 2.4em;
+  margin-top: 0.12rem;
+  margin-bottom: 0.12rem;
+}
+
