--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -13,12 +13,12 @@
       <div *ngIf="(validationModel.validationRun|async)?.end_time" class="container text-center mb-5 mt-4"
            style="max-width: 40rem;">
         <h1>Validation Results</h1>
+        <div class="p-col-12">
+          <qa-validation-summary [valrun]="(validationModel.validationRun|async)"></qa-validation-summary>
+        </div>
       </div>
 
     </div>
-  </div>
-  <div class="p-col-12">
-    <qa-validation-summary></qa-validation-summary>
   </div>
 </div>
 
