preliminary html code added to validation-summary component

--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -1,1 +1,160 @@
-<p>summary works!</p>
+<div class="container center-text">
+  <div class="card-deck">
+    <div id="result_summary" class="card mb-4 shadow-sm">
+      <div class="card-header">
+        <h4 class="my-0 font-weight-normal">
+          Summary:
+<!--          {% if is_owner and val.is_unpublished %}-->
+          <span *ngIf="valrun?.is_unpublished">
+          <span class="my-0 font-weight-normal no_edit_name">{{valrun?.name_tag}}</span>
+          <input class="d-none edit_name"/>
+          <button class="btn btn-sm btn-primary btn-action edit_name_btn" title="Change Name" onclick="edit_name(event)"><span class="pi pi-pencil"></span></button>
+          </span>
+            <!--          <button class="btn btn-sm btn-primary btn-action d-none save_name_btn result_page" title="Save Name" onclick="ajax_save_name(event, '{{ valrun.id }}')"><span class="fas fa-save"></span></button>-->
+<!--          <button class="btn btn-sm btn-primary btn-action d-none cancel_editing_btn result_page" title="Cancel" onclick="cancel_editing(event)"><span class="fas fa-ban"></span></button>-->
+<!--          {% else %}-->
+<!--          <span class="my-0 font-weight-normal no_edit_name">{{valrun.name_tag}}<span class="no_name_change_info fas fa-question-circle help-icon" title="Validation has been published. There is no possibility of changing its name."> </span> </span>-->
+<!--          {% endif %}-->
+        </h4>
+      </div>
+<!--      <div class="card-body">-->
+<!--        <ul>-->
+<!--          <li>Started validation on {{ valrun.start_time }}, finished on {{ valrun.end_time }}.</li>-->
+<!--          <li>Compared {{ valrun.dataset_configurations.count }} datasets:-->
+<!--            <ul>-->
+<!--              {% for dc in valrun.dataset_configurations.all %}-->
+<!--              {% if dc.id != valrun.reference_configuration.id %}-->
+<!--              <li>-->
+<!--                <em>Dataset {{ forloop.counter }}:</em> {{ dc.dataset.pretty_name }} ({{ dc.version.pretty_name }}, {{ dc.variable.pretty_name }})-->
+<!--                [Filters:-->
+<!--                {% if not dc.filters.all and not dc.parametrisedfilter_set.all %}-->
+<!--                none-->
+<!--                {% else %}-->
+<!--                {% for filter in dc.filters.all %} {{ filter.description }}; {% endfor %}-->
+<!--                {% for pfilter in dc.parametrisedfilter_set.all %} {{ pfilter.filter.description }} {{ pfilter.parameters }}; {% endfor %}-->
+<!--                {% endif %}]-->
+<!--              </li>-->
+<!--              {% endif %}-->
+<!--              {% endfor %}-->
+
+<!--              <li>-->
+<!--                <em>Reference:</em> {{ valrun.reference_configuration.dataset.pretty_name }} ({{ valrun.reference_configuration.version.pretty_name }}, {{ valrun.reference_configuration.variable.pretty_name }})-->
+<!--                [Filters:-->
+<!--                {% if not valrun.reference_configuration.filters.all and not valrun.reference_configuration.parametrisedfilter_set.all %}-->
+<!--                none-->
+<!--                {% else %}-->
+<!--                {% for filter in valrun.reference_configuration.filters.all %} {{ filter.description }}; {% endfor %}-->
+<!--                {% for pfilter in valrun.reference_configuration.parametrisedfilter_set.all %} {{ pfilter.filter.description }} {{ pfilter.parameters }}; {% endfor %}-->
+<!--                {% endif %}]-->
+<!--              </li>-->
+<!--            </ul>-->
+<!--          </li>-->
+
+<!--          {% if valrun.min_lat and valrun.min_lon and valrun.max_lat and valrun.max_lon %}-->
+<!--          <li>Spatial filter bounding box: [{{ valrun.min_lat }}, {{ valrun.min_lon }}, {{ valrun.max_lat }}, {{ valrun.max_lon }}].</li>-->
+<!--          {% else %}-->
+<!--          <li>Validated globally.</li>-->
+<!--          {% endif %}-->
+
+<!--          {% if valrun.interval_from and valrun.interval_to %}-->
+<!--          <li>Validation period / temporal filter: {{ valrun.interval_from }} to {{ valrun.interval_to }}.</li>-->
+<!--          {% else %}-->
+<!--          <li>Validated over entire available timespan.</li>-->
+<!--          {% endif %}-->
+
+<!--          {% if valrun.anomalies != 'none' %}-->
+<!--          <li>Validation metrics calculated from anomalies-->
+<!--            {% if valrun.anomalies == 'climatology' %}-->
+<!--            against climatology computed on years {{ valrun.anomalies_from|date:"Y" }} through {{ valrun.anomalies_to|date:"Y" }}.-->
+<!--            {% elif valrun.anomalies == 'moving_avg_35_d' %}-->
+<!--            against 35 day moving average.-->
+<!--            {% endif %}-->
+<!--          </li>-->
+<!--          {% else %}-->
+<!--          <li>Validation metrics calculated from absolute values.</li>-->
+<!--          {% endif %}-->
+
+<!--          <li>Triple collocation analysis was-->
+<!--            {% if valrun.tcol %} activated. {% else %} deactivated. {% endif %}-->
+<!--          </li>-->
+
+<!--          {% if valrun.scaling_method != 'none' %}-->
+<!--          <li>Scaling reference:-->
+<!--            {{ valrun.scaling_ref.dataset.pretty_name }} ({{ valrun.scaling_ref.version.pretty_name }}, {{ valrun.scaling_ref.variable.pretty_name }})-->
+<!--            [Filters:-->
+<!--            {% if not valrun.scaling_ref.filters.all and not valrun.scaling_ref.parametrisedfilter_set.all %}-->
+<!--            none-->
+<!--            {% else %}-->
+<!--            {% for filter in valrun.scaling_ref.filters.all %} {{ filter.description }}; {% endfor %}-->
+<!--            {% for pfilter in valrun.scaling_ref.parametrisedfilter_set.all %} {{ pfilter.filter.description }} {{ pfilter.parameters }}; {% endfor %}-->
+<!--            {% endif %}]-->
+<!--          </li>-->
+<!--          {% else %}-->
+<!--          <li>Scaling reference: {{ valrun.get_scaling_method_display }}.</li>-->
+<!--          {% endif %}-->
+
+<!--          <li>Scaling method: {{ valrun.get_scaling_method_display }}.</li>-->
+
+<!--          <li>Processing took {{ run_time }} minutes (wall time).</li>-->
+
+<!--          {% if valrun.progress == -1 %}-->
+<!--          <li>The validation was cancelled.</li>-->
+<!--          {% else %}-->
+<!--          <li {% if error_rate > 0 %} class="alert-danger" {% endif %}>-->
+<!--            {% widthratio error_rate 1 100 %}% ({{ valrun.error_points }} of {{ valrun.total_points }}) of the processed locations (grid points) produced errors during calculation.-->
+<!--          </li>-->
+<!--          {% endif %}-->
+
+<!--          {% if is_owner %}-->
+<!--          {% if valrun.expiry_date %}-->
+<!--          <li>-->
+<!--            {% if valrun.is_near_expiry %}-->
+<!--            <span class="fas fa-exclamation-triangle"></span>-->
+<!--            This validation will SOON be automatically removed during cleanup on {{ valrun.expiry_date }}.-->
+<!--            {% else %}-->
+<!--            <span class="fas fa-calendar-alt"></span>-->
+<!--            This validation will be automatically removed during cleanup on {{ valrun.expiry_date }}.-->
+<!--            {% endif %}-->
+<!--          </li>-->
+<!--          {% elif valrun.is_archived %}-->
+<!--          <li>-->
+<!--            <span class="fas fa-archive"></span>-->
+<!--            This validation has been archived. It will NOT be automatically removed during cleanup.-->
+<!--          </li>-->
+<!--          {% endif %}-->
+<!--          {% endif %}-->
+
+<!--          {% if valrun.doi %}-->
+<!--          <li>-->
+<!--            <span class="fas fa-book"></span> This result was published on zenodo with DOI <a target="_blank" href="{{doi_prefix}}{{ valrun.doi }}">{{ valrun.doi }}</a>.-->
+<!--          </li>-->
+<!--          {% endif %}-->
+
+<!--        </ul>-->
+
+<!--        {% if is_owner and valrun.is_unpublished %}-->
+<!--        <div style="float: right;" class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">-->
+<!--          <button class="btn btn-sm btn-primary" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}', true)"><span class="fas fa-times"></span> Remove</button>-->
+<!--          {% if valrun.is_archived %}-->
+<!--          <button class="btn btn-sm btn-primary" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar-alt"></span> Un-archive</button>-->
+<!--          {% else %}-->
+<!--          <button class="btn btn-sm btn-primary" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span> Renew</button>-->
+<!--          <button class="btn btn-sm btn-primary" title="Archive" onclick="ajax_archive_result('{{ valrun.id }}', true)"><span class="fas fa-archive"></span> Archive</button>-->
+<!--          {% endif %}-->
+<!--          {% if valrun.output_file %}-->
+<!--          <button type="button" title="Publish on Zenodo" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#publishDialog">-->
+<!--            <span class="fas fa-book" ></span> Publish-->
+<!--          </button>-->
+<!--          {% endif %}-->
+<!--        </div>-->
+<!--        {% if valrun.output_file %}-->
+<!--        <div class="publishingNote small text-muted {% if not val.publishing_in_progress %} collapse {% endif %}" style="float: right">-->
+<!--          <div class="spinner-border spinner-border-sm" role="status"><span class="sr-only">Publishing in progress...</span></div>-->
+<!--          Publishing in progress...-->
+<!--        </div>-->
+<!--        {% endif %}-->
+<!--        {% endif %}-->
+<!--      </div>-->
+    </div>
+  </div>
+</div>
