name of scss file changed because it contains styling for all validationrun connected pages

--- a/UI/src/assets/css/validation-result-pages-style.scss
+++ b/UI/src/assets/css/validation-result-pages-style.scss
@@ -50,3 +50,11 @@
   box-shadow: 0 0 0 .2rem rgba(33, 63, 224, .3);
   outline: none;
 }
+.help-icon {
+  border: initial;
+  padding: initial;
+  display: inline-block;
+  float: right;
+  background-color: inherit;
+  color: inherit;
+}
