--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
@@ -17,25 +17,27 @@
           </div>
         </div>
         <div class="p-col-6">
-          <div class="p-fluid" >
-          <span class="p-float-label ">
+          <div class="p-fluid">
+            <div class="p-float-label ">
 
-                                 <p-inputNumber id="minLatInput" [minFractionDigits]="1" [maxFractionDigits]="3"
-                                                [(ngModel)]="subsetModel.minLat"></p-inputNumber>
+              <p-inputNumber id="minLatInput" [minFractionDigits]="1" [maxFractionDigits]="3"
+                             [ngModel]="subsetModel.minLat$|async"
+                             (ngModelChange)="subsetModel.minLat$.next($event)"></p-inputNumber>
 
-                                 <label for="minLatInput">Lat</label>
-                               </span>
-        </div>
+              <label for="minLatInput">Lat</label>
+            </div>
+          </div>
 
         </div>
         <div class="p-col-6">
-          <div class="p-fluid" >
-          <span class="p-float-label ">
-                                 <p-inputNumber id="minLonInput" [minFractionDigits]="1" [maxFractionDigits]="3"
-                                                [(ngModel)]="subsetModel.minLon"></p-inputNumber>
+          <div class="p-fluid">
+            <div class="p-float-label ">
+              <p-inputNumber id="minLonInput" [minFractionDigits]="1" [maxFractionDigits]="3"
+                             [ngModel]="subsetModel.minLon$|async"
+                             (ngModelChange)="subsetModel.minLon$.next($event)"></p-inputNumber>
 
-                                 <label for="minLonInput">Lon</label>
-                               </span>
+              <label for="minLonInput">Lon</label>
+            </div>
           </div>
         </div>
       </div>
@@ -46,11 +48,7 @@
       <div class="p-d-flex p-jc-center">
         <button pButton type="button" icon="pi pi-trash" pTooltip="Clear coordinates"
                 class="p-button-info p-mr-2" style="padding: 0.2rem;"
-                 (click)="clearCoordinates()"></button>
-        <button pButton type="button" icon="pi pi-map" pTooltip="Open map"
-                class="p-button-info " style="padding: 0.2rem;"
-                [disabled]="true"></button>
-
+                (click)="clearCoordinates()"></button>
       </div>
     </div>
 
@@ -63,24 +61,26 @@
           </div>
         </div>
         <div class="p-col-6">
-          <div class="p-fluid" >
-          <span class="p-float-label ">
+          <div class="p-fluid">
+            <div class="p-float-label ">
 
-                                 <p-inputNumber id="maxLatInput" [minFractionDigits]="1" [maxFractionDigits]="3"
-                                                [(ngModel)]="subsetModel.maxLat"></p-inputNumber>
+              <p-inputNumber id="maxLatInput" [minFractionDigits]="1" [maxFractionDigits]="3"
+                             [ngModel]="(subsetModel.maxLat$|async)"
+                             (ngModelChange)="subsetModel.maxLat$.next($event)"></p-inputNumber>
 
-                                 <label for="maxLatInput">Lat</label>
-                               </span>
+              <label for="maxLatInput">Lat</label>
+            </div>
           </div>
         </div>
         <div class="p-col-6">
-          <div class="p-fluid" >
-          <span class="p-float-label ">
-                                 <p-inputNumber id="maxLonInput" [minFractionDigits]="1" [maxFractionDigits]="3"
-                                                [(ngModel)]="subsetModel.maxLon"></p-inputNumber>
+          <div class="p-fluid">
+            <div class="p-float-label ">
+              <p-inputNumber id="maxLonInput" [minFractionDigits]="1" [maxFractionDigits]="3"
+                             [ngModel]="subsetModel.maxLon$|async"
+                             (ngModelChange)="subsetModel.maxLon$.next($event)"></p-inputNumber>
 
-                                 <label for="maxLonInput">Lon</label>
-                               </span>
+              <label for="maxLonInput">Lon</label>
+            </div>
           </div>
         </div>
       </div>
