--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -84,7 +84,8 @@
       <!--      Map-->
       <div class="p-col-12">
         <p-panel toggleable="true" [header]="'Map'" styleClass="map-panel">
-          <qa-map class="map"
+          <qa-map class="map" #qwerty
+                  [spatialSubset]="validationModel.spatialSubsetModel"
                   [center]="[-37.1,37.6]"
                   [zoom]="2.5"></qa-map>
         </p-panel>
