--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -155,48 +155,46 @@
                                         </span>
                                     {% endif %}
                                 {% endif %}
-                            </div>
 
-                            <div class="col-sm" style="text-align: left; max-width: 3.0rem">
-                                <div class="dropdown">
-                                    <button class="dropdownbutton" title="More Options"  style="color: #003eff;">
-                                        <span class="fas fa-angle-double-right"> </span>
-                                    </button>
-                                    <div class="dropdown-content" style="text-align: left">
-                                        {% if valrun.output_file %}
+                            <div class="dropdown">
+                                <button class="dropdownbutton" style="color: #003eff;">
+                                    <span class="fas fa-angle-double-right"> </span>
+                                </button>
+                                <div class="dropdown-content" style="text-align: left">
+                                    {% if valrun.output_file %}
+                                        <button class="dropdown-item"
+                                            onclick="location.href='{{ valrun.output_dir_url }}graphs.zip';"
+                                            title="Download graphs .zip">
+                                            <span class="fas fa-download"></span>
+                                        Download Graphs
+                                        </button>
+                                        <button class="dropdown-item"
+                                                onclick="location.href='{{ valrun.output_file.url }}';"
+                                                title="Download validation run .nc file">
+                                                <span class="fas fa-file-download"></span>
+                                        Download NetCDF file
+                                        </button>
+                                    {% endif %}
+                                    {% if valrun.is_unpublished %}
+                                        <span class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">
+                                        <button class="dropdown-item"
+                                                title="Remove this validation run"
+                                                onclick="ajax_delete_result('{{ valrun.id }}', false)">
+                                                <span class="fas fa-times"></span>
+                                        Delete Validation Run
+                                        </button>
+                                        {% if not valrun.is_archived %}
                                             <button class="dropdown-item"
-                                                onclick="location.href='{{ valrun.output_dir_url }}graphs.zip';"
-                                                title="Download graphs .zip">
-                                                <span class="fas fa-download"></span>
-                                            Download Graphs
-                                            </button>
-                                            <button class="dropdown-item"
-                                                    onclick="location.href='{{ valrun.output_file.url }}';"
-                                                    title="Download validation run .nc file">
-                                                    <span class="fas fa-file-download"></span>
-                                            Download NetCDF file
+                                                    title="Extend lifespan of this validation run"
+                                                    onclick="ajax_extend_result('{{ valrun.id }}', true)">
+                                                    <span class="fas fa-calendar-plus"></span>
+                                            Extend Life Span
                                             </button>
                                         {% endif %}
-                                        {% if valrun.is_unpublished %}
-                                            <span class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">
-                                            <button class="dropdown-item"
-                                                    title="Remove this validation run"
-                                                    onclick="ajax_delete_result('{{ valrun.id }}', false)">
-                                                    <span class="fas fa-times"></span>
-                                            Delete Validation Run
-                                            </button>
-                                            {% if not valrun.is_archived %}
-                                                <button class="dropdown-item"
-                                                        title="Extend lifespan of this validation run"
-                                                        onclick="ajax_extend_result('{{ valrun.id }}', true)">
-                                                        <span class="fas fa-calendar-plus"></span>
-                                                Extend Life Span
-                                                </button>
-                                            {% endif %}
-                                            </span>
-                                        {% endif %}
-                                        </div>
+                                        </span>
+                                    {% endif %}
                                     </div>
+                                </div>
                             </div>
 
                         </div>
