--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -178,7 +178,7 @@
                                                 onclick="location.href='{% url 'validation' %}?valrun_uuid={{ valrun.id }}';"
                                                 title="Restore settings from this validation">
                                                 <span class="fas fa-redo"></span>
-                                        Load validation settings
+                                        Load Validation Settings
                                         </button>
 
                                     {% endif %}
