--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -172,7 +172,7 @@
                                                 onclick="location.href='{{ valrun.output_file.url }}';"
                                                 title="Download validation run .nc file">
                                                 <span class="fas fa-file-download"></span>
-                                        Download NetCDF file
+                                        Download NetCDF File
                                         </button>
                                         <button class="dropdown-item"
                                                 onclick="location.href='{% url 'validation' %}?valrun_uuid={{ valrun.id }}';"
